# MultiMapMerge

./: .gitignore  CMakeLists.txt  readme.md
include/MultiMapMerge/: DiscreteGlobalMap.h  KeyFrameNode.h  MapMerger.h  common.h
src/: DiscreteGlobalMap.cpp  KeyFrameNode.cpp  MapMerger.cpp
